[gd_scene load_steps=37 format=3 uid="uid://vwr8ajoufse8"]

[ext_resource type="Script" path="res://Controller/Player.gd" id="1_12if5"]
[ext_resource type="Shader" path="res://Controller/Player.gdshader" id="2_7j02w"]
[ext_resource type="Script" path="res://Controller/SmoothCamera.gd" id="2_e12si"]
[ext_resource type="Script" path="res://Controller/weapon_area.gd" id="3_jj0ow"]
[ext_resource type="AudioStream" uid="uid://c4prdjc6y4kw2" path="res://GDTVAssetPack/Audio/jump.ogg" id="3_wfp7i"]
[ext_resource type="AudioStream" uid="uid://ds5ewrd6b3tip" path="res://GDTVAssetPack/Audio/tap.ogg" id="4_0mhnh"]
[ext_resource type="PackedScene" uid="uid://cyr441vn7v3s" path="res://Player/points_manager.tscn" id="7_uked3"]

[sub_resource type="Animation" id="Animation_i4k0q"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(0, 0, 0.00523599), Vector3(0, 0, -0.00523599)]
}

[sub_resource type="Animation" id="Animation_fdc5i"]
resource_name = "LeanBackward"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(0.10472, 0, -0.0174533), Vector3(0.10472, 0, 0.0174533)]
}

[sub_resource type="Animation" id="Animation_gv67s"]
resource_name = "LeanForwards"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(-0.10472, 0, 0.0174533), Vector3(-0.10472, 0, -0.0174533)]
}

[sub_resource type="Animation" id="Animation_c5eoi"]
resource_name = "LeanLeft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(-0.10472, 1.5708, -0.0174533), Vector3(-0.10472, 1.5708, 0.0174533)]
}

[sub_resource type="Animation" id="Animation_6po8p"]
resource_name = "LeanRight"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(-0.10472, -1.5708, 0.0174533), Vector3(-0.10472, -1.5708, -0.0174533)]
}

[sub_resource type="Animation" id="Animation_pqxi5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.139626, -0.00523599, 0.0349066)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56ijk"]
_data = {
"Idle": SubResource("Animation_i4k0q"),
"LeanBackward": SubResource("Animation_fdc5i"),
"LeanForwards": SubResource("Animation_gv67s"),
"LeanLeft": SubResource("Animation_c5eoi"),
"LeanRight": SubResource("Animation_6po8p"),
"RESET": SubResource("Animation_pqxi5")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4to3j"]
render_priority = 0
shader = ExtResource("2_7j02w")
shader_parameter/outline_color = null
shader_parameter/outline_width = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mx3t8"]
next_pass = SubResource("ShaderMaterial_4to3j")
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.8, 0.380392, 0.172549, 1)
roughness = 0.06
rim_enabled = true
rim_tint = 0.0
disable_receive_shadows = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_leh0u"]
radius = 0.45
height = 1.85

[sub_resource type="Curve" id="Curve_p02jg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.81555, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vbp78"]
curve = SubResource("Curve_p02jg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c2uhr"]
emission_shape_scale = Vector3(1, 0.25, 1)
emission_shape = 1
emission_sphere_radius = 0.4
gravity = Vector3(0, 1, 0)
damping_max = 1.0
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_vbp78")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vlcne"]
diffuse_mode = 3
specular_mode = 1
vertex_color_use_as_albedo = true
albedo_color = Color(0.796078, 0.796078, 0.796078, 1)
emission_enabled = true
emission = Color(0.796078, 0.796078, 0.796078, 1)
emission_energy_multiplier = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_jdvgd"]
material = SubResource("StandardMaterial3D_vlcne")
radial_segments = 16
rings = 8

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wnt7s"]
emission_shape_scale = Vector3(1, 0.25, 1)
emission_shape = 1
emission_sphere_radius = 0.4
spread = 180.0
flatness = 1.0
initial_velocity_min = 2.0
initial_velocity_max = 4.0
gravity = Vector3(0, 1, 0)
damping_min = 3.0
damping_max = 6.0
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_vbp78")

[sub_resource type="SphereMesh" id="SphereMesh_v6snp"]
material = SubResource("StandardMaterial3D_vlcne")
radial_segments = 16
rings = 8

[sub_resource type="CylinderMesh" id="CylinderMesh_6rkga"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4b8wu"]
points = PackedVector3Array(0.186824, 0.463874, 0.0708561, -0.190797, -0.465839, -0.0597801, -0.191705, -0.468075, 0.0568848, -0.191705, 0.468075, 0.0568848, 0.0568848, 0.468075, -0.191705, 0.185824, -0.46141, -0.0736459, 0.0708561, -0.463874, 0.186824, -0.0736459, 0.46141, 0.185824, -0.0597801, -0.465839, -0.190797, -0.117774, 0.464895, -0.161358, -0.102516, -0.461558, 0.17146, 0.185824, 0.46141, -0.0736459, 0.186824, -0.463874, 0.0708561, 0.100166, 0.465327, 0.172873, 0.0987952, -0.459058, -0.173698, -0.190797, 0.465839, -0.0597801, -0.161358, -0.464895, -0.117774, 0.1414, -0.457676, 0.1414, -0.173698, 0.459058, 0.0987952, -0.0597801, 0.465839, -0.190797, 0.17146, 0.461558, -0.102516, 0.0568848, -0.468075, -0.191705, 0.0708561, 0.463874, 0.186824, -0.0736459, -0.46141, 0.185824, -0.173698, -0.459058, 0.0987952, 0.0987952, 0.459058, -0.173698, 0.172873, 0.465327, 0.100166, -0.117774, -0.464895, -0.161358, -0.161358, 0.464895, -0.117774, 0.17146, -0.461558, -0.102516, -0.102516, 0.461558, 0.17146, 0.1414, 0.457676, 0.1414)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t7spk"]
radius = 0.45
height = 1.85

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_v6a6g"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p7ngg"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_83ygf"]
animation = &"LeanRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_es02k"]
animation = &"LeanLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kbg3n"]
animation = &"LeanForwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w0na7"]
animation = &"LeanBackward"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_e0dl0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_p7ngg")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_83ygf")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_es02k")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_kbg3n")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_w0na7")
blend_point_4/pos = Vector2(0, -1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8skvo"]
streams_count = 1
stream_0/stream = ExtResource("3_wfp7i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l80nr"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 1
stream_0/stream = ExtResource("4_0mhnh")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
floor_max_angle = 0.872665
script = ExtResource("1_12if5")

[node name="BasePivot" type="Node3D" parent="."]
transform = Transform3D(0.999403, -0.0341708, -0.00518501, 0.0345599, 0.989665, 0.139173, 0.000375782, -0.139269, 0.990255, 0, -1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="BasePivot"]
libraries = {
"": SubResource("AnimationLibrary_56ijk")
}

[node name="ProtoMesh" type="MeshInstance3D" parent="BasePivot"]
transform = Transform3D(0.999998, 0.00216226, 0, -0.00216226, 0.999998, 0, 0, 0, 1, 0.00216226, 0.999998, 0)
layers = 2
material_override = SubResource("StandardMaterial3D_mx3t8")
mesh = SubResource("CapsuleMesh_leh0u")
skeleton = NodePath("../..")

[node name="RunParticles" type="GPUParticles3D" parent="BasePivot"]
cast_shadow = 0
emitting = false
amount = 32
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_c2uhr")
draw_pass_1 = SubResource("SphereMesh_jdvgd")

[node name="JumpParticles" type="GPUParticles3D" parent="BasePivot"]
cast_shadow = 0
emitting = false
amount = 6
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_wnt7s")
draw_pass_1 = SubResource("SphereMesh_v6snp")

[node name="WeaponArea" type="Area3D" parent="BasePivot"]
transform = Transform3D(0.999971, 0.00665688, 0.00376036, -0.00376028, -2.50762e-05, 0.999993, 0.00665693, -0.999978, -4.37114e-08, 0.416641, 1.1959, -1.1)
visible = false
monitoring = false
script = ExtResource("3_jj0ow")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BasePivot/WeaponArea"]
transform = Transform3D(0.999992, -5.40167e-08, 0.00405376, -5.44824e-08, 1, 2.69862e-05, -0.00405376, -2.69862e-05, 0.999992, 0.00751361, -0.399959, -0.00168057)
mesh = SubResource("CylinderMesh_6rkga")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BasePivot/WeaponArea"]
transform = Transform3D(0.999992, -5.40167e-08, 0.00405376, -5.44824e-08, 1, 2.69862e-05, -0.00405376, -2.69862e-05, 0.999992, 0.00751361, -0.399959, -0.00168057)
shape = SubResource("ConvexPolygonShape3D_4b8wu")

[node name="AttackTimer" type="Timer" parent="BasePivot/WeaponArea"]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_t7spk")

[node name="CameraTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.57, 0)

[node name="SmoothCamera" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
cull_mask = 1047549
current = true
script = ExtResource("2_e12si")
target = NodePath("../CameraTarget")

[node name="SpringArm3D" type="SpringArm3D" parent="SmoothCamera"]
unique_name_in_owner = true
shape = SubResource("SeparationRayShape3D_v6a6g")
spring_length = 4.0

[node name="ThirdPersonCamera" type="Camera3D" parent="SmoothCamera/SpringArm3D"]
unique_name_in_owner = true

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../BasePivot")
tree_root = SubResource("AnimationNodeBlendSpace2D_e0dl0")
anim_player = NodePath("../BasePivot/AnimationPlayer")
parameters/blend_position = Vector2(0, 0)

[node name="Audio" type="Node3D" parent="."]

[node name="JumpAudio" type="AudioStreamPlayer3D" parent="Audio"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_8skvo")
max_db = -15.0

[node name="RunAudio" type="AudioStreamPlayer3D" parent="Audio"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_l80nr")
volume_db = -8.0
max_db = -5.0
pitch_scale = 2.0

[node name="FootstepTimer" type="Timer" parent="Audio"]
wait_time = 0.2
autostart = true

[node name="PointsManager" parent="." instance=ExtResource("7_uked3")]

[connection signal="area_entered" from="BasePivot/WeaponArea" to="BasePivot/WeaponArea" method="_on_area_entered"]
[connection signal="timeout" from="BasePivot/WeaponArea/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Audio/FootstepTimer" to="." method="_on_footstep_timer_timeout"]
